--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My YT Bookmarks",
-  "version": "0.1.0",
+  "name": "YT Timeline Bookmark",
+  "version": "0.1.1",
   "description": "Saving timestamps in YT videos",
   "permissions": ["storage", "tabs"],
   "host_permissions": ["https://*.youtube.com/*"],
@@ -30,7 +30,7 @@
       "24": "assets/ext-icon.png",
       "32": "assets/ext-icon.png"
     },
-    "default_title": "My YT Bookmarks",
+    "default_title": "YT Timeline Bookmark",
     "default_popup": "popup.html"
   },
   "manifest_version": 3
